--- a/node_type_mapping.json
+++ b/node_type_mapping.json
@@ -1,217 +1,1 @@
-{
-    "identifier": {
-        "PYTHON": "identifier",
-        "JAVA": "identifier",
-        "CPP": "identifier"
-    },
-    "string": {
-        "PYTHON": "string",
-        "JAVA": "string_literal",
-        "CPP": "string_literal"
-    },
-    "comment": {
-        "PYTHON": "comment",
-        "JAVA": "comment",
-        "CPP": "comment"
-    },
-    "function_definition": {
-        "PYTHON": "function_definition",
-        "JAVA": "method_declaration",
-        "CPP": "function_definition"
-    },
-    "function_call": {
-        "PYTHON": "call",
-        "JAVA": "method_invocation",
-        "CPP": "call_expression"
-    },
-    "class_definition": {
-        "PYTHON": "class_definition",
-        "JAVA": "class_declaration",
-        "CPP": "class_definition"
-    },
-    "class_instantiation": {
-        "PYTHON": "call",
-        "JAVA": "class_instance_creation",
-        "CPP": "call_expression"
-    },
-    "variable_definition": {
-        "PYTHON": "assignment_expression",
-        "JAVA": "local_variable_declaration",
-        "CPP": "variable_declaration"
-    },
-    "variable_usage": {
-        "PYTHON": "identifier",
-        "JAVA": "identifier",
-        "CPP": "identifier"
-    },
-    "conditional": {
-        "PYTHON": "if_statement",
-        "JAVA": "if_statement",
-        "CPP": "if_statement"
-    },
-    "loop": {
-        "PYTHON": "for_statement",
-        "JAVA": "for_statement",
-        "CPP": "for_statement"
-    },
-    "break": {
-        "PYTHON": "break_statement",
-        "JAVA": "break_statement",
-        "CPP": "break_statement"
-    },
-    "continue": {
-        "PYTHON": "continue_statement",
-        "JAVA": "continue_statement",
-        "CPP": "continue_statement"
-    },
-    "return": {
-        "PYTHON": "return_statement",
-        "JAVA": "return_statement",
-        "CPP": "return_statement"
-    },
-    "import": {
-        "PYTHON": "import_statement",
-        "JAVA": "import_declaration",
-        "CPP": "import_statement"
-    },
-    "module": {
-        "PYTHON": "module",
-        "JAVA": "compilation_unit",
-        "CPP": "translation_unit"
-    },
-    "attribute_access": {
-        "PYTHON": "attribute_access",
-        "JAVA": "field_access",
-        "CPP": "member_expression"
-    },
-    "attribute_definition": {
-        "PYTHON": "assignment_expression",
-        "JAVA": "field_declaration",
-        "CPP": "variable_declaration"
-    },
-    "attribute_usage": {
-        "PYTHON": "identifier",
-        "JAVA": "identifier",
-        "CPP": "identifier"
-    },
-    "binary_operation": {
-        "PYTHON": "binary_operation",
-        "JAVA": "infix_expression",
-        "CPP": "binary_expression"
-    },
-    "unary_operation": {
-        "PYTHON": "unary_operation",
-        "JAVA": "prefix_expression",
-        "CPP": "unary_expression"
-    },
-    "list": {
-        "PYTHON": "list",
-        "JAVA": "array_creation",
-        "CPP": "array_creation"
-    },
-    "list_access": {
-        "PYTHON": "subscript_expression",
-        "JAVA": "array_access",
-        "CPP": "array_access"
-    },
-    "list_definition": {
-        "PYTHON": "assignment_expression",
-        "JAVA": "local_variable_declaration",
-        "CPP": "variable_declaration"
-    },
-    "list_usage": {
-        "PYTHON": "identifier",
-        "JAVA": "identifier",
-        "CPP": "identifier"
-    },
-    "dictionary": {
-        "PYTHON": "dictionary",
-        "JAVA": "map_creation",
-        "CPP": "map_creation"
-    },
-    "dictionary_access": {
-        "PYTHON": "subscript_expression",
-        "JAVA": "map_access",
-        "CPP": "map_access"
-    },
-    "dictionary_definition": {
-        "PYTHON": "assignment_expression",
-        "JAVA": "local_variable_declaration",
-        "CPP": "variable_declaration"
-    },
-    "dictionary_usage": {
-        "PYTHON": "identifier",
-        "JAVA": "identifier",
-        "CPP": "identifier"
-    },
-    "tuple": {
-        "PYTHON": "tuple",
-        "JAVA": "tuple_creation",
-        "CPP": "tuple_creation"
-    },
-    "tuple_access": {
-        "PYTHON": "subscript_expression",
-        "JAVA": "tuple_access",
-        "CPP": "tuple_access"
-    },
-    "tuple_definition": {
-        "PYTHON": "assignment_expression",
-        "JAVA": "local_variable_declaration",
-        "CPP": "variable_declaration"
-    },
-    "tuple_usage": {
-        "PYTHON": "identifier",
-        "JAVA": "identifier",
-        "CPP": "identifier"
-    },
-    "string_access": {
-        "PYTHON": "subscript_expression",
-        "JAVA": "string_access",
-        "CPP": "string_access"
-    },
-    "string_definition": {
-        "PYTHON": "assignment_expression",
-        "JAVA": "local_variable_declaration",
-        "CPP": "variable_declaration"
-    },
-    "string_usage": {
-        "PYTHON": "identifier",
-        "JAVA": "identifier",
-        "CPP": "identifier"
-    },
-    "number_access": {
-        "PYTHON": "subscript_expression",
-        "JAVA": "number_access",
-        "CPP": "number_access"
-    },
-    "number_definition": {
-        "PYTHON": "assignment_expression",
-        "JAVA": "local_variable_declaration",
-        "CPP": "variable_declaration"
-    },
-    "number_usage": {
-        "PYTHON": "identifier",
-        "JAVA": "identifier",
-        "CPP": "identifier"
-    },
-    "boolean": {
-        "PYTHON": "boolean",
-        "JAVA": "boolean_literal",
-        "CPP": "boolean_literal"
-    },
-    "boolean_access": {
-        "PYTHON": "subscript_expression",
-        "JAVA": "boolean_access",
-        "CPP": "boolean_access"
-    },
-    "boolean_definition": {
-        "PYTHON": "assignment_expression",
-        "JAVA": "local_variable_declaration",
-        "CPP": "variable_declaration"
-    },
-    "boolean_usage": {
-        "PYTHON": "identifier",
-        "JAVA": "identifier",
-        "CPP": "identifier"
-    }
-}
+{"identifier": {"PYTHON": "identifier", "JAVA": "identifier", "CPP": "identifier"}, "string": {"PYTHON": "string", "JAVA": "string_literal", "CPP": "string_literal"}, "comment": {"PYTHON": "comment", "JAVA": "comment", "CPP": "comment"}, "function_definition": {"PYTHON": "function_definition", "JAVA": "method_declaration", "CPP": "function_definition"}, "function_call": {"PYTHON": "call", "JAVA": "method_invocation", "CPP": "call_expression"}, "class_definition": {"PYTHON": "class_definition", "JAVA": "class_declaration", "CPP": "class_definition"}, "class_instantiation": {"PYTHON": "call", "JAVA": "class_instance_creation", "CPP": "call_expression"}, "variable_definition": {"PYTHON": "assignment_expression", "JAVA": "local_variable_declaration", "CPP": "variable_declaration"}, "variable_usage": {"PYTHON": "identifier", "JAVA": "identifier", "CPP": "identifier"}, "conditional": {"PYTHON": "if_statement", "JAVA": "if_statement", "CPP": "if_statement"}, "loop": {"PYTHON": "for_statement", "JAVA": "for_statement", "CPP": "for_statement"}, "break": {"PYTHON": "break_statement", "JAVA": "break_statement", "CPP": "break_statement"}, "continue": {"PYTHON": "continue_statement", "JAVA": "continue_statement", "CPP": "continue_statement"}, "return": {"PYTHON": "return_statement", "JAVA": "return_statement", "CPP": "return_statement"}, "import": {"PYTHON": "import_statement", "JAVA": "import_declaration", "CPP": "import_statement"}, "module": {"PYTHON": "module", "JAVA": "compilation_unit", "CPP": "translation_unit"}, "attribute_access": {"PYTHON": "attribute_access", "JAVA": "field_access", "CPP": "member_expression"}, "attribute_definition": {"PYTHON": "assignment_expression", "JAVA": "field_declaration", "CPP": "variable_declaration"}, "attribute_usage": {"PYTHON": "identifier", "JAVA": "identifier", "CPP": "identifier"}, "binary_operation": {"PYTHON": "binary_operation", "JAVA": "infix_expression", "CPP": "binary_expression"}, "unary_operation": {"PYTHON": "unary_operation", "JAVA": "prefix_expression", "CPP": "unary_expression"}, "list": {"PYTHON": "list", "JAVA": "array_creation", "CPP": "array_creation"}, "list_access": {"PYTHON": "subscript_expression", "JAVA": "array_access", "CPP": "array_access"}, "list_definition": {"PYTHON": "assignment_expression", "JAVA": "local_variable_declaration", "CPP": "variable_declaration"}, "list_usage": {"PYTHON": "identifier", "JAVA": "identifier", "CPP": "identifier"}, "dictionary": {"PYTHON": "dictionary", "JAVA": "map_creation", "CPP": "map_creation"}, "dictionary_access": {"PYTHON": "subscript_expression", "JAVA": "map_access", "CPP": "map_access"}, "dictionary_definition": {"PYTHON": "assignment_expression", "JAVA": "local_variable_declaration", "CPP": "variable_declaration"}, "dictionary_usage": {"PYTHON": "identifier", "JAVA": "identifier", "CPP": "identifier"}, "tuple": {"PYTHON": "tuple", "JAVA": "tuple_creation", "CPP": "tuple_creation"}, "tuple_access": {"PYTHON": "subscript_expression", "JAVA": "tuple_access", "CPP": "tuple_access"}, "tuple_definition": {"PYTHON": "assignment_expression", "JAVA": "local_variable_declaration", "CPP": "variable_declaration"}, "tuple_usage": {"PYTHON": "identifier", "JAVA": "identifier", "CPP": "identifier"}, "string_access": {"PYTHON": "subscript_expression", "JAVA": "string_access", "CPP": "string_access"}, "string_definition": {"PYTHON": "assignment_expression", "JAVA": "local_variable_declaration", "CPP": "variable_declaration"}, "string_usage": {"PYTHON": "identifier", "JAVA": "identifier", "CPP": "identifier"}, "number_access": {"PYTHON": "subscript_expression", "JAVA": "number_access", "CPP": "number_access"}, "number_definition": {"PYTHON": "assignment_expression", "JAVA": "local_variable_declaration", "CPP": "variable_declaration"}, "number_usage": {"PYTHON": "identifier", "JAVA": "identifier", "CPP": "identifier"}, "boolean": {"PYTHON": "boolean", "JAVA": "boolean_literal", "CPP": "boolean_literal"}, "boolean_access": {"PYTHON": "subscript_expression", "JAVA": "boolean_access", "CPP": "boolean_access"}, "boolean_definition": {"PYTHON": "assignment_expression", "JAVA": "local_variable_declaration", "CPP": "variable_declaration"}, "boolean_usage": {"PYTHON": "identifier", "JAVA": "identifier", "CPP": "identifier"}}
